<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/map"
        android:layout_marginBottom="0dp">
        <EditText
            android:id="@+id/TF_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:hint="@string/search_bar_hint"
            android:inputType="textPersonName"
            style="?android:attr/buttonBarButtonStyle"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/B_search"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"
            android:text="@string/search"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/B_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/go" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        tools:context="com.example.maps.MapsActivity" />

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/map"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-650dp" >
        <Button
            android:id="@+id/btn_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_hospital"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_supermarket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_supermarket"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_school"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_pool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_pool"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>